--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,6 +7,11 @@ on:
             - main
             - 'feature/*'
 
+env:
+    MONGO_URI: 'mongodb+srv://supercluster.d93jj.mongodb.net/superData'
+    MONGO_USERNAME: ${{ VARS.MONGO_USERNAME }}
+    MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+
 jobs:
     unit-testing:
         name: Unit Testing
