--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -53,6 +53,7 @@ jobs:
               run: npm install
             
             - name: Check Code Coverage
+              continue-on-error: true
               run: npm run coverege
 
             - name: Archive Test Result
