--- a/.github/workflows/jc-job-getter.yaml
+++ b/.github/workflows/jc-job-getter.yaml
@@ -23,4 +23,4 @@ jobs:
           git config user.email "${EMAIL}"
           git add .
           git commit -m "Always green!"
-          git push "https://${TOKEN}@github.com/${{ github.repository }}.git"
+          git push "https://${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }}.git"
